After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698479 - Eats CPU after resuming
Eats CPU after resuming
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: color
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
: 699395 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-04-20 23:57 UTC by Bastien Nocera
Modified: 2013-05-03 09:30 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bastien Nocera 2013-04-20 23:57:02 UTC
g-s-d master with colord master started eating 70% CPU after resuming my laptop.

It kept looping saying:
(gnome-settings-daemon:31342): color-plugin-WARNING **: failed to get info about deleted file: Erro ao obter informação para o arquivo "/home/hadess/.local/share/icc/.goutputstream-ZNW9VW": Arquivo ou diretório não encontrado
(gnome-settings-daemon:31342): color-plugin-DEBUG: emit add: /home/hadess/.local/share/icc/edid-513958c1fe8ca86407a67d3e07a10528.icc
(gnome-settings-daemon:31342): color-plugin-DEBUG: profile /home/hadess/.local/share/icc/edid-513958c1fe8ca86407a67d3e07a10528.icc added
(gnome-settings-daemon:31342): color-plugin-DEBUG: /org/freedesktop/ColorManager/devices/xrandr_Apple_Computer_Inc_Color_LCD_hadess_1000 changed
(gnome-settings-daemon:31342): color-plugin-DEBUG: need to assign display device xrandr-Apple Computer Inc-Color LCD
(gnome-settings-daemon:31342): color-plugin-DEBUG: auto-edid profile is old, and contains no MAPPING_device_id data
(gnome-settings-daemon:31342): color-plugin-DEBUG: auto-profile edid does not exist, creating as /home/hadess/.local/share/icc/edid-513958c1fe8ca86407a67d3e07a10528.icc
(gnome-settings-daemon:31342): color-plugin-DEBUG: setting root window ICC profile atom from /home/hadess/.local/share/icc/edid-513958c1fe8ca86407a67d3e07a10528.icc
(gnome-settings-daemon:31342): color-plugin-DEBUG: falling back to dummy ramp

(gnome-settings-daemon:31342): color-plugin-WARNING **: failed to get info about deleted file: Erro ao obter informação para o arquivo "/home/hadess/.local/share/icc/.goutputstream-WI05VW": Arquivo ou diretório não encontrado
(gnome-settings-daemon:31342): color-plugin-DEBUG: emit add: /home/hadess/.local/share/icc/edid-513958c1fe8ca86407a67d3e07a10528.icc
(gnome-settings-daemon:31342): color-plugin-DEBUG: profile /home/hadess/.local/share/icc/edid-513958c1fe8ca86407a67d3e07a10528.icc added
(gnome-settings-daemon:31342): color-plugin-DEBUG: /org/freedesktop/ColorManager/devices/xrandr_Apple_Computer_Inc_Color_LCD_hadess_1000 changed
(gnome-settings-daemon:31342): color-plugin-DEBUG: need to assign display device xrandr-Apple Computer Inc-Color LCD
(gnome-settings-daemon:31342): color-plugin-DEBUG: auto-edid profile is old, and contains no MAPPING_device_id data
(gnome-settings-daemon:31342): color-plugin-DEBUG: auto-profile edid does not exist, creating as /home/hadess/.local/share/icc/edid-513958c1fe8ca86407a67d3e07a10528.icc
(gnome-settings-daemon:31342): color-plugin-DEBUG: setting root window ICC profile atom from /home/hadess/.local/share/icc/edid-513958c1fe8ca86407a67d3e07a10528.icc
(gnome-settings-daemon:31342): color-plugin-DEBUG: falling back to dummy ramp


Disabling the color plugin fixed the problem.
Comment 1 Bastien Nocera 2013-04-21 00:15:58 UTC
colord *libraries* are master, the actual D-Bus daemon is the system one:
colord-0.1.31-1.fc19.x86_64

Re-enabling the plugin caused this error:
(gnome-settings-daemon:31342): libcolord-CRITICAL **: cd_client_connect: assertion `CD_IS_CLIENT (client)' failed
** (gnome-settings-daemon:31342): DEBUG: GnomeSettingsManager: emitting plugin-activated color

But the plugin was not eating CPU anymore.
Comment 2 Richard Hughes 2013-04-26 10:16:15 UTC
commit f5e8a005b111eac19743c5cb4005b47474117334
Author: Richard Hughes <richard@hughsie.com>
Date:   Fri Apr 26 11:15:17 2013 +0100

    color: Fix occasional high load on login
    
    Load the ICC profile metadata if we are using cd_icc_get_metadata_item()
    
    Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=698479
Comment 3 Bastien Nocera 2013-05-03 09:30:14 UTC
*** Bug 699395 has been marked as a duplicate of this bug. ***