color: Fix occasional high load on login

Load the ICC profile metadata if we are using cd_icc_get_metadata_item()

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=698479